# embassy-pico-2-exception

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
